feat: There is a .toList() method for streams